<resources>
    <string name="app_name">FSearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- custom string value -->
    <string name="nasional">Nasional</string>
    <string name="internasional">Internasional</string>
    <string name="pemerintah">Pemerintah</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="universitas">Universitas</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="login_title">Mulailah miliki tim lomba yang kamu dambakan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="verifikasi_title">Kode verifikasi telah dikirim ke email kamu</string>
    <string name="masukkan_kode_otp_title">Masukkan kode 4 digit tersebut</string>
    <string name="submit">Submit</string>
    <string name="contoh_teks_pada_custom_dialog">Contoh teks pada custom dialog</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="keluar">Keluar</string>
    <string name="detail_lomba_title">Detail Lomba</string>
    <string name="contoh_format_tanggal_detil_lomba">Minggu, 11 Januari 2023</string>
    <string name="contoh_judul">CONTOH JUDUL</string>
    <string name="nama_penyelenggara">Nama Penyelenggara</string>
    <string name="lokasi_lomba">Lokasi lomba</string>
    <string name="contoh_biaya">Rp 200.000</string>
    <string name="deskripsi_lomba">Deskripsi Lomba</string>
    <string name="contoh_deskripsi">Contoh deskripsi</string>
    <string name="link">Link</string>
    <string name="contoh_link">https://www.google.com/</string>
    <string name="tawaran_ajakan_title">Tawaran Ajakan</string>
    <string name="respon">Respon</string>
    <string name="contoh_nama">Contoh Nama</string>
    <string name="contoh_prodi">Teknik Informatika</string>
    <string name="contoh_universitas">Universitas Brawijaya</string>
    <string name="contoh_angkatan">2018</string>
    <string name="contoh_format_tanggal_detail_notifikasi">May, 4 2020 // 1:40 PM</string>
    <string name="download_cv_pengguna">Download CV pengguna (pdf)</string>
    <string name="profile_title">Profile</string>
    <string name="contoh_jumlah_teman_atau_like">20</string>
    <string name="friends">Friends</string>
    <string name="likes">Likes</string>
    <string name="contoh_bio">Ini adalah contoh bio</string>
    <string name="ajak">Ajak</string>
    <string name="tambah_teman">Tambah teman</string>
    <string name="tulis_testimoni">Tulis testimoni</string>
    <string name="form_ajakan_title">Form Ajakan</string>
    <string name="kirim">Kirim</string>
    <string name="deskripsi_ajakan">Deskripsi Ajakan</string>
    <string name="contoh_word_counter">0/500</string>
    <string name="upload_file">Upload File</string>
    <string name="form_balasan_title">Form Balasan</string>
    <string name="deskripsi_balasan">Deskripsi Balasan</string>
    <string name="buat_pengumuman_title">Buat Pengumuman</string>
    <string name="post">Post</string>
    <string name="deskripsi_pengumuman">Deskripsi Pengumuman</string>
    <string name="ajukan_diri_title">Ajukan Diri</string>
    <string name="deskripsi_pengajuan">Deskripsi Pengajuan</string>
    <string name="form">Form</string>
    <string name="publish">Publish</string>
    <string name="foto_poster_lomba">Foto Poster Lomba</string>
    <string name="kategori_tingkatan_lomba">Kategori Tingkatan Lomba</string>
    <string name="kategori_pembuat_lomba">Kategori Pembuat Lomba</string>
    <string name="pembuat_lomba">Pembuat Lomba</string>
    <string name="tema_lomba">Tema Lomba</string>
    <string name="judul_lomba">Judul lomba</string>
    <string name="tanggal_pelaksanaan">Tanggal Pelaksanaan</string>
    <string name="biaya_pendaftaran">Biaya Pendaftaran</string>
    <string name="masukkan_biaya">Masukkan biaya (hanya angka)</string>
    <string name="link_lomba">Link Lomba</string>
    <string name="form_testimoni_title">Form Testimoni</string>
    <string name="deskripsi_testimoni">Deskripsi Testimoni</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="simpan">Simpan</string>
    <string name="bio">Bio</string>
    <string name="menerima_ajakan_bergabung_dengan_tim_lomba">Menerima ajakan bergabung dengan tim lomba</string>
    <string name="akademik">Akademik</string>
    <string name="tahun_angkatan">Tahun Angkatan</string>
    <string name="fakultas">Fakultas</string>
    <string name="jurusan">Jurusan</string>
    <string name="program_studi">Program Studi</string>
    <string name="keminatan_title">Keminatan/Konsentrasi</string>
    <string name="biodata">Biodata</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="umur">Umur</string>
    <string name="tahun">Tahun</string>
    <string name="kota_asal">Kota Asal</string>
    <string name="kepribadian">Kepribadian</string>
    <string name="home_title">Home</string>
    <string name="tambah_pengumuman">Tambah Pengumuman</string>
    <string name="lomba_title">Lomba</string>
    <string name="notifikasi_title">Notifikasi</string>
    <string name="pengguna_title">Pengguna</string>
    <string name="data_diri_universitas_brawijaya">: Universitas Brawijaya</string>
    <string name="angkatan">Angkatan</string>
    <string name="data_diri_angkatan">: 2019</string>
    <string name="data_diri_prodi">: Teknik Informatika</string>
    <string name="data_diri_jurusan">: Teknik Informatika</string>
    <string name="keminatan">Keminatan</string>
    <string name="data_diri_keminatan">: Interactive Media</string>
    <string name="contoh_kelamin">Laki-laki</string>
    <string name="contoh_umur">22 tahun</string>
    <string name="contoh_lokasi">Jakarta</string>
    <string name="contoh_jumlah_testimoni">(10)</string>
    <string name="contoh_nama_penyelenggara">Nama Penyelenggara</string>
    <string name="contoh_tanggal_adapter_lomba">Minggu, 2 Juni 2019</string>
    <string name="contoh_riwayat_posting">10h</string>
    <string name="ajukan_diri">Ajukan Diri</string>
    <string name="navbar_home_title">HOME</string>
    <string name="navbar_lomba_title">LOMBA</string>
    <string name="navbar_pengguna_title">PENGGUNA</string>
    <string name="navbar_chat_title">CHAT</string>
    <string name="navbar_profile_title">PROFILE</string>
    <string name="search_view_toolbar_title">Search View</string>
    <string name="favorite_toolbar_title">Favorite</string>
    <string name="notification_toolbar_title">Notification</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="custom_respon_dialog_message_text">Bagaimana respon kamu terhadap ajakan dari Patra?</string>
    <string name="contoh_pesan_chat">Contoh Pesan Chat</string>
    <string name="badge_message_not_read">2</string>
    <string name="chat_title">Chat</string>
    <string name="add">Add</string>
    <string name="format_waktu_chat">13.15</string>
    <string name="message_here">Message here</string>
    <string name="contoh_pesan_pada_halaman_chat">Contoh pesan pada halaman chat</string>
    <string name="daftar_pengguna">Daftar Pengguna</string>
    <string name="masukkan_tanggal">Masukkan tanggal</string>

    <!-- custom string array -->
    <string-array name="tema_lomba">
        <item>Desain Grafis</item>
        <item>Informasi dan Teknologi</item>
        <item>Sosial Politik</item>
        <item>Hukum</item>
        <item>Seni Tari</item>
        <item>Musik</item>
        <item>Karya Ilmiah</item>
        <item>Olahraga</item>
        <item>Seni Rupa</item>
        <item>Bahasa</item>
        <item>Agama</item>
        <item>Lainnya</item>
    </string-array>
</resources>