<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/navbar_home_title"
        android:icon="@drawable/bottom_nav_home_icon_selector"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/lombaFragment"
        android:title="@string/navbar_lomba_title"
        android:icon="@drawable/bottom_nav_lomba_icon_selector"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/penggunaFragment"
        android:title="@string/navbar_pengguna_title"
        android:icon="@drawable/bottom_nav_pengguna_icon_selector"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/chatFragment"
        android:title="@string/navbar_chat_title"
        android:icon="@drawable/bottom_nav_chat_icon_selector"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/navbar_profile_title"
        android:icon="@drawable/bottom_nav_profile_icon_selector"
        app:showAsAction="withText"/>
</menu>