<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.FormTambahLombaFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_icon"
                android:backgroundTint="@color/white"
                android:layout_alignParentStart="true"
                android:id="@+id/form_tambah_lomba_button_back"
                android:layout_marginEnd="30dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:layout_toEndOf="@+id/form_tambah_lomba_button_back"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/form_tambah_lomba_button_publish"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/form_tambah_lomba_button_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:background="@drawable/custom_button_not_enabled_layout"
                android:text="@string/publish"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_poster_lomba"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/camera_icon"
                android:scaleType="center"
                android:backgroundTint="@color/white"
                android:layout_marginStart="20dp"
                android:id="@+id/form_tambah_lomba_button_pilih_poster"
                android:layout_marginEnd="10dp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/form_tambah_lomba_poster_lomba"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori_tingkatan_lomba"
            android:layout_marginStart="20dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/form_tambah_lomba_radio_group_tingkatan_lomba">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nasional"
                android:id="@+id/form_tambah_lomba_radio_button_nasional"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internasional"
                android:id="@+id/form_tambah_lomba_radio_button_internasional"/>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori_pembuat_lomba"
            android:layout_marginStart="20dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/form_tambah_lomba_radio_group_kategori_pembuat_lomba">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pemerintah"
                android:id="@+id/form_tambah_lomba_radio_button_pemerintah"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perusahaan"
                android:id="@+id/form_tambah_lomba_radio_button_perusahaan"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universitas"
                android:id="@+id/form_tambah_lomba_radio_button_universitas"/>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pembuat_lomba"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/pembuat_lomba"
            android:layout_marginBottom="10dp"
            android:inputType="textCapSentences|textMultiLine"
            android:id="@+id/form_tambah_lomba_pembuat_lomba"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tema_lomba"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/tema_lomba"
                android:id="@+id/form_tambah_lomba_tema_lomba"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/form_tambah_lomba_spinner_tema_lomba"
                android:layout_gravity="center_vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_lomba"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/judul_lomba"
            android:layout_marginBottom="10dp"
            android:id="@+id/form_tambah_lomba_judul_lomba"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_pelaksanaan"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_pelaksanaan"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/form_tambah_lomba_tanggal_pelaksanaan"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi_lomba"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/lokasi_lomba"
            android:layout_marginBottom="10dp"
            android:id="@+id/form_tambah_lomba_lokasi_lomba"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biaya_pendaftaran"
            android:layout_marginStart="20dp"/>
<!--        <androidx.appcompat.widget.AppCompatEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:id="@+id/form_tambah_lomba_biaya_pendaftaran"-->
<!--            android:hint="Masukkan Biaya (hanya angka)"-->
<!--            android:layout_marginBottom="10dp"/>-->
        <com.cottacush.android.currencyedittext.CurrencyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:currencySymbol="Rp"
            app:maxNumberOfDecimalDigits="2"
            android:layout_marginBottom="10dp"
            android:hint="@string/masukkan_biaya"
            android:id="@+id/form_tambah_lomba_biaya_pendaftaran"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_pengumuman"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/form_tambah_lomba_deskripsi_pengumuman"
            android:hint="@string/deskripsi_pengumuman"
            android:layout_marginBottom="10dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_lomba"
            android:layout_marginStart="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/form_tambah_lomba_link_lomba"
            android:hint="@string/link_lomba"
            android:layout_marginBottom="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>