<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingHorizontal="40dp"
        android:textSize="24sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/login_title"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="80dp"
        android:id="@+id/register_field_nama"
        android:inputType="text"
        android:hint="@string/nama"
        app:layout_constraintTop_toBottomOf="@+id/register_header" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="25dp"
        android:id="@+id/register_field_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/register_field_nama" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:id="@+id/register_field_password"
        android:inputType="number"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/register_field_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="60dp"
        android:id="@+id/register_button_daftar"
        android:text="@string/daftar"
        android:background="@drawable/custom_button_not_enabled_layout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/register_field_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>