<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rv_pengumuman_foto_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="15dp"
                android:src="@drawable/standard_user_photo" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/rv_pengumuman_right_side"
                android:layout_toEndOf="@+id/rv_pengumuman_foto_profile"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/contoh_nama"
                    android:id="@+id/rv_pengumuman_nama"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contoh_prodi"
                    android:id="@+id/rv_pengumuman_program_studi"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contoh_universitas"
                    android:id="@+id/rv_pengumuman_nama_universitas"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:layout_marginEnd="20dp"
                android:id="@+id/rv_pengumuman_right_side">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contoh_riwayat_posting"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/rv_pengumuman_waktu_posting"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contoh_angkatan"
                    android:id="@+id/rv_pengumuman_tahun_angkatan"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contoh_deskripsi"
            android:id="@+id/rv_pengumuman_deskripsi"
            android:layout_marginBottom="10dp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_pengumuman_poster"
            android:src="@drawable/no_image_available"
            android:layout_marginBottom="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajukan_diri"
            android:id="@+id/rv_pengumuman_button_ajukan_diri"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/secondary_four"/>
</androidx.appcompat.widget.LinearLayoutCompat>